--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
 	id 'org.springframework.boot' version '2.0.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -34,4 +35,6 @@ dependencies {
 	compile 'mysql:mysql-connector-java'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
