--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
 	id 'org.springframework.boot' version '2.0.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
-	id 'war'
+	//id 'war'
 }
 
 group = 'com.crud'
@@ -32,9 +32,9 @@ dependencies {
 
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compile 'mysql:mysql-connector-java'
+	//compile 'mysql:mysql-connector-java'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 
-	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
