--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
-SPRING_DATASOURCE_URL=${JDBC_DATABASE_URL}
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
