--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-	compile 'org.postgresql:postgresql'
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//compile 'mysql:mysql-connector-java'
+	compile 'mysql:mysql-connector-java'
+	//compile 'org.postgresql:postgresql'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 
