--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,11 @@ dependencies {
 
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//compile 'mysql:mysql-connector-java'
-	compile 'org.postgresql:postgresql'
+	compile 'mysql:mysql-connector-java'
+	//compile 'org.postgresql:postgresql'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
-
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
