--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 }
