--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
+
+	compile('com.google.code.gson:gson:2.8.1')
 }
