--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,22 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ADMINISTRATION
 admin.mail=m934020@gmail.com
 
+# ACTUATOR
+management.endpoints.web.exposure.include=*
 
+# ACTUATOR INFO
+info.app.name=Task Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+
+info.app.administartor.email=john.doe@test.com
+info.app.administartor.adress.street=Super Cool Street
+info.app.administartor.adress.number=42
+
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=tasks@crud.com
+info.company.phone=744489230
 
