--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 
 	compile('com.google.code.gson:gson:2.8.1')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 }
