--- a/build.gradle
+++ b/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
 	compile('com.google.code.gson:gson:2.8.1')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 }
